middleware & csrf protect d-60

--- a/views/details.ejs
+++ b/views/details.ejs
@@ -5,6 +5,7 @@
     <p><%= post.description %></p>
     <a href="/admin/edit/<%= post._id %>" class="btn-full">Edit</a>
     <form action="/admin/delete-post/<%= post._id %>" method="post">
+      <input hidden value="<%= csrfToken %>" name="_csrf" />
         <button>Delete</button>
     </form>
 </section>
