--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -4,6 +4,7 @@
       <a href="/">Go back home</a>
       <h1 class="title">Login your account!</h1>
       <form action="/login" method="post">
+      <input hidden value="<%= csrfToken %>" name="_csrf" />
         <div>
           <label for="email">Enter email</label>
           <input type="email" id="email" name="email" required />
