--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -4,6 +4,7 @@
       <a href="/">Go back home</a>
       <h1 class="title">Create your account!</h1>
       <form action="/register" method="post">
+      <input hidden value="<%= csrfToken %>" name="_csrf" />
         <div>
           <label for="username">Enter username</label>
           <input type="text" id="username" name="username" required />
