--- a/views/editPost.ejs
+++ b/views/editPost.ejs
@@ -4,6 +4,7 @@
       <a href="/">Go back home</a>
       <h1 class="title">Edit post now!</h1>
       <form action="/admin/edit-post" method="post">
+        <input hidden value="<%= csrfToken %>" name="_csrf" />
         <input type="text" value="<%= post._id %>" name="postId" hidden>
         <div>
           <label for="title">Enter title</label>
